--- a/wp-content/themes/koelsch/develop/scss/layout/_header.scss
+++ b/wp-content/themes/koelsch/develop/scss/layout/_header.scss
@@ -570,6 +570,7 @@
 					}
 
 					padding-left:40px;
+					text-align:left;
 
 					@include media ('>=desktop') {
 						padding: 10px 0 10px 20px;
